--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
              <div>
                    <section id="header" class="bg">
         <h1>Connect & get a brief 30' BRAINSTORMING session to enjoy unexpected ideas or book a 2,5h STRATEGIC MASTERMIND if your family and team need some refreshing honesty.</h1>
-                <p>WhatsApp:<a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
-                <p>LinkedIn:<a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
-                <p>FaceBook:<a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
-                <p>Instagram:<a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
-                <p>Telegram:<a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
+                <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
+                <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
+                <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
+                <p>Instagram <a href="https://www.instagram.com/alisa.polymath/" target="\_blank" title="Instagram Profile">alisa.polymath</a></p>
+                <p>Telegram <a href="https://t.me/lissenx" target="\_blank" title="Telegram Public">alisa special agent fairy</a></p>
             </div>
     </section>
             </div>
