--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides inspirational education to individuals & families with kids seeking tools and wisdom to build meaningful connections & trust, train soft skills, care & focus.</p>
+            <p class="maintext">provides education to individuals & families seeking tools and wisdom to build meaningful relationships based on trust.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
