--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Alisa LarchenCoach</h1>
             <p class="maintext">provides inspiration, education & training on soft skills to individuals & families with neurodiverse brains who seek community, tools and wisdom to build meaningful relationships based on trust, care & friendliness.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure.</p>
+                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Provides structure. Supports young spirits in the developmentsl process of their bodies & talents.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
                 <p>She speaks and writes about Sensitivity, Mindfulness & the Art of Choice.</p>
                 <p>Alisa also develops her start-up in the field of edutech.</p>
