--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
              <div>
                    <section id="header" class="bg">
-        <h1>Connect for a refreshing BRAINSTORMING session to enjoy unexpected ideas or a STRATEGIC MIND-BLOWING MASTERMIND!</h1>
+        <h1>Connect for a refreshing BRAINSTORMING session or a STRATEGIC MASTERMIND to enjoy the flow of unexpected Ideas and Innovative Visions!</h1>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
