--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides education & training on soft skills to individuals & families with neurodiverse brains who seek community, tools and wisdom to build trustworthy relationships.</p>
+            <p class="maintext">provides education & training on soft skills to individuals & families with neurodiverse brains who seek community, tools and wisdom and wish to build trustworthy relationships.</p>
             <div class="maintext_comment">
                 <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Supports young spirits in the developmental process. Offers structure.</p>
                 <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
-                <p>She speaks and writes about Neurodiversity, Creativity, Sensitivity, Mindfulness & the Art of making a Choice, Receiving Rejection & Saying a No.</p>
-                <p>Alisa also has her start-up in the field of edutech.</p>
+                <p>She speaks and writes about Trust, Body Awareness, Creativity, Sensitivity, Mindfulness, The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
+                <p>Alisa also has her start-up in the field of edutech and serves as an inspirational community manager within several projects.</p>
             </div>
              <div>
                    <section id="header" class="bg">
-        <h1>Connect for a refreshing BRAINSTORMING session or a STRATEGIC MASTERMIND to enjoy the flow of Unexpected Ideas, Inspirational Inventions & Innovative Visions!</h1>
+        <h1>Connect for a refreshing BRAINSTORMING session or a STRATEGIC MASTERMIND to enjoy the flow of Unexpected Ideas & Innovative Visions!</h1>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
