--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides education & training on soft skills to individuals & families with neurodiverse brains who seek tools, community, information & wisdom to build trustworthy relationships.</p>
+            <p class="maintext">provides education & soft skills' training to individuals & families with neurodiverse brains who seek tools, community, information & wisdom to build trustworthy relationships.</p>
             <div class="maintext_comment">
-                <p>She reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Supports young spirits in the developmental process. Offers structure.</p>
-                <p>Being a professional heuristic pedagogue, Alisa shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
-                <p>She speaks and writes about Trust, Body Awareness, Creativity, Sensitivity, Mindfulness, The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
+                <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Supports young spirits in the developmental process. Offers structure.</p>
+                <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
+                <p>Speak and write about Trust, Body Awareness, Creativity, Sensitivity & Mindfulness. Has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
                 <p>Alisa also has her start-up in the field of edutech and serves as an inspirational community manager within several projects.</p>
             </div>
              <div>
