--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides education & soft skills' training to neurodiverse individuals & families who seek tools, community, information & wisdom to build trustworthy relationships.</p>
+            <p class="maintext">provides education & soft skills' training to neurodiverse individuals & families who seek tools, community, information & practical life hacks to grow confidence, build trustworthy relationships, heal educational traumas and deal with preformance tension in life, school and office.</p>
             <div class="maintext_comment">
                 <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Supports young spirits in the developmental process. Offers structure.</p>
                 <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
