--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides education & soft skills' training to neurodiverse individuals & families who seek tools, community, information & practical life hacks to grow confidence, build trustworthy relationships, heal educational traumas and deal with preformance tension in life, school and office.</p>
+            <p class="maintext">provides education, soft skills training and counselling to neurodiverse individuals & families who seek support, answers, tools, information, community & practical lifehacks to grow confidence, build trustworthy relationships, heal educational traumas and deal with preformance tension in life, school & office.</p>
             <div class="maintext_comment">
-                <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Supports young spirits in the developmental process. Offers structure.</p>
-                <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
-                <p>Speak and write about Trust, Body Awareness, Creativity, Sensitivity & Mindfulness. Has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
-                <p>Alisa also has her start-up in the field of edutech and serves as an inspirational community manager within several projects.</p>
+                <p>Alisa is a wise woman who reminds people of their inner beauty in times of outer chaos and shares a vibe of natural calm. Asks deep questions. Shares insights playfully. Helps with presentation and exam anxiety. Offers truly comfortable new structure and inspiration.</p>
+                <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented - inventive - thinking. She is a polymath & a creative nerd who loves to melt hearts with humour. Sing & read her fairy tales.</p>
+                <p>Speak and write about Creativity, Sensitivity, Mindfulness, Trust & Body Awareness. She has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No. Expression vs Depression.</p>
+                <p>Alisa also has her start-up in the field of edutech and serves as an inspirational community manager within several projects, including transformational coaching boardgaming club.</p>
             </div>
              <div>
                    <section id="header" class="bg">
