--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <h1>Alisa LarchenCoach</h1>
             <p class="maintext">provides education, soft skills training and counselling to neurodiverse individuals & families who seek support, answers, tools, information, community & practical lifehacks to grow confidence, build trustworthy relationships, heal educational traumas and deal with preformance tension in life, school & office.</p>
             <div class="maintext_comment">
-                <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Shares insights playfully. Helps with presentation and exam anxiety. Offers truly comfortable new structure and inspiration.</p>
-                <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented - inventive - thinking. She is a polymath & a creative nerd who loves to melt hearts with humour.</p>
-                <p>Speak and write about Creativity, Sensitivity, Mindfulness, Trust & Body Awareness. She has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
-                <p>Alisa also has her start-up in the field of edutech and serves as a wise inspirational community manager within several projects. She is a member of Transformational Games Coaching Club.</p>
+                <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Shares insights. Helps with presentation and exam anxiety. Offers structure, inspiration & fresh motivation.</p>
+                <p>Being a professional heuristic pedagogue, she shows people the power of their own imagination and solution oriented inventive thinking. She is a polymath & a creative nerd who loves to melt hearts with humour & wisdom.</p>
+                <p>She speaks and writes about Creativity, Sensitivity, Mindfulness, Trust & Body Awareness. She has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
+                <p>Alisa is also a founder of a start-up in the field of edutech, where she serves as a community manager, growing a team & developing her natural gift into a successful business.</p>
             </div>
              <div>
                    <section id="header" class="bg">
