--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="maintext">provides education and counselling to neurodiverse individuals & families who seek answers, support, tools & practical lifehacks to grow confidence, heal educational traumas and deal with preformance tension as in life so in school & around the office.</p>
             <div class="maintext_comment">
                 <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Offers structure.</p>
-                <p>Being a professional heuristic pedagogue, she shows people the power of their own talent, imagination and shares tactics of solution oriented thinking. She is a polymath & a creative geek who loves to melt hearts with humour & wisdom.</p>
+                <p>Being a professional heuristic pedagogue, she shows people the power of imagination and shares tactics of solution oriented thinking. She is a polymath & a creative geek who loves to melt hearts with humour & wisdom.</p>
                 <p>Her main focus is Creativity, Sensitivity, Mindfulness & Body Awareness. She has courses on subjects like The Art of Making a Choice, Receiving Rejection & Saying a No.</p>
                 <p>Alisa is also a founder of a start-up in the field of edutech, where she serves as a community manager, growing a team & developing her natural gift into a successful business.</p>
             </div>
