--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Alisa LarchenCoach</h1>
-            <p class="maintext">provides education and counselling to neurodiverse individuals & families who seek answers, support, tools & practical lifehacks to grow confidence, heal educational traumas and deal with preformance tension as in life so in school & around the office.</p>
+            <p class="maintext">provides education and counselling to neurodiverse individuals & families who seek support, tools & practical lifehacks to grow confidence, heal educational traumas and deal with performance tension — as in life so in school & office.</p>
             <div class="maintext_comment">
                 <p>Alisa reminds people of their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Offers structure.</p>
                 <p>Being a professional heuristic pedagogue, she shows people the power of imagination and shares tactics of solution oriented thinking. She is a polymath & a creative geek who loves to melt hearts with humour & wisdom.</p>
