--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Alisa LarchenCoach</h1>
             <p class="maintext">provides education and counselling to neurodiverse individuals & families who seek support, tools & practical lifehacks to grow confidence, heal educational traumas and deal with performance tension — as in life so in school & office.</p>
             <div class="maintext_comment">
-                <p>Alisa reminds people about their inner beauty in times of outer chaos. Asks deep questions. Helps with presentation and exam anxiety. Offers structure.</p>
+                <p>Alisa reminds people about their inner beauty in times of outer chaos. Asks deep questions. Helps with exam anxiety & performance tension. Offers structure.</p>
                 <p>Being a professional heuristic pedagogue, she shows people the power of imagination and shares tactics of solution oriented thinking. She is a polymath & a creative geek who loves to melt hearts with humour & wisdom.</p>
                 <p>Her main focus is Creativity, Sensitivity, Mindfulness & Body Awareness.</p>
                 <p>Alisa is also a founder of a start-up in the field of edutech, where she serves as a community manager, growing a team & developing her natural gift into a successful business.</p>
