--- a/ru/index.html
+++ b/ru/index.html
@@ -34,7 +34,7 @@
  
                 <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями решения трудных задач.</p>
                  
-                <p>Алиса — полимат и творческая умница, которая любит смягчать сердца своим мудрым юмором. Её главные фокусы — творчество, чувствительность, осознанность и телесная осведомленность.</p>
+                <p>Алиса — полимат и творческая умница, которая любит смягчать сердца своим мудрым юмором. Её главные фокусы — искусство и культура, чувствительность, осознанность и телесная осведомленность.</p>
                 <p>Алиса также является основательницей стартапа в сфере edutech, где выполняет роль менеджера сообщества, развивает команду и преобразовывает свой природный дар в успешный бизнес.</p>
             </div>
  
@@ -48,10 +48,6 @@
         
     </section>             
         <section id="contacts" class="bg">
-
-            <div style="padding: 2px 30px 7px;">
-                <p><a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a> (WhatsApp)</p>
-            </div>
  
             <div>
                    <section id="header" class="bg">
