--- a/ru/index.html
+++ b/ru/index.html
@@ -26,7 +26,7 @@
     <div class="flex">
         <div class="column_text">
             <h1>Алиса ЛарченКоуч</h1>              
-            <p class="maintext">предоставляет обучение и консультирование для нейро-нетипичных людей и семей, которые ищут инструменты и практические лайфхаки для 1) развития уверенности, 2) исцеления педагогических травм.</p>
+            <p class="maintext">предоставляет обучение и консультирование для нейро-нетипичных людей и семей, которые ищут инструменты и практические лайфхаки для исцеления педагогических травм и развития уверенности.</p>
             <div class="maintext_comment">
                 <p>Алиса напоминает людям об их внутренней красоте в моменты внешнего хаоса. Задает глубокие вопросы, помогает справляться с напряжением при выступлениях и тревожностью перед экзаменами. Предлагает успокаивающую структуру и надежное руководство.</p>
                 <p>Как профессиональный эвристический педагог, она демонстрирует силу воображения и делится креативными стратегиями решения трудных задач.</p>
@@ -36,7 +36,7 @@
             </div> 
             <div>
                    <section id="header" class="bg">
-        <h1>Присоединяйтесь к освежающей БРЕЙНСТОРМИНГ-сессии и приходите на СТРАТЕГИЧЕСКИЙ МАСТЕРМАЙНД, чтобы насладиться потоком ИННОВАЦИОННЫХ ВИДЕНИЙ и НЕОЖИДАННЫХ ИДЕЙ!💡</h1>
+        <h1>Приходите на брейнстормы и стратегические мастермайнды, чтобы насладиться потоком ИННОВАЦИОННЫХ ВИЗИЙ и НЕОЖИДАННЫХ ИДЕЙ!💡</h1>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
