--- a/ru/index.html
+++ b/ru/index.html
@@ -36,7 +36,7 @@
             </div> 
             <div>
                    <section id="header" class="bg">
-        <h1>Приходите на брейнстормы и стратегические мастермайнды, чтобы насладиться потоком ИННОВАЦИОННЫХ ВИЗИЙ и НЕОЖИДАННЫХ ИДЕЙ!💡</h1>
+        <h1>Приходите на брейнстормы и стратегические мастермайнды, чтобы насладиться потоком инновационных и неожиданных!💡</h1>
                 <p>WhatsApp <a href="tel:+35797658958"><b class="mark">+357 97 658 958</b></a></p>
                 <p>LinkedIn <a href="https://www.linkedin.com/in/alisalarchenko/" target="\_blank" title="LinkedIn Profile">alisalarchenko</a></p>
                 <p>FaceBook <a href="https://www.facebook.com/alisalarchencoach/" target="\_blank" title="FaceBook Profile">alisalarchencoach</a></p>
